examples/invalid/syntaxErr/exception/donErr.wacc
# done typo

# Output:
# #syntax_error#

# Program:

begin
    try
        int x = 1
    catch ArithmeticException e do
        println e
   don
end